# oe-alliance-e2-skindefault

./: configure.ac  skin_default.xml
skin_default/buttons/: Makefile.am
skin_fallback_1080/: Makefile.am
skin_fallback_1080/buttons/: Makefile.am
skin_fallback_1080/icons/: Makefile.am
skin_fallback_1080/infobar/: Makefile.am
skin_fallback_1080/screens/: Makefile.am
