installdir = $(datadir)/enigma2/skin_fallback_1080/icons

dist_install_DATA = epgclock.png \
    epgclock_add.png \
    epgclock_autotimer.png \
    epgclock_post.png \
    epgclock_pre.png \
    epgclock_prepost.png \
    epgclock_selpost.png \
    epgclock_selpre.png \
    epgclock_selprepost.png \
    epgclock_zap.png \
    epgclock_zaprec.png \
    input_error.png \
    input_info.png \
    input_message.png \
    input_question.png \
    input_warning.png \
    menu_on.png \
    menu_off.png \
    update_off.png \
    update_stable.png \
    update_unstable.png
